# CoClaude

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: crosscut.md
src/coclaude/: acl.py  config.py  db.py  mailer.py  main.py  template.py
src/coclaude/auth/: invites.py  provider.py  routes.py  tokens.py
src/coclaude/google/: bootstrap.py  client.py  docs_read.py  docs_write.py
src/coclaude/tools/: admin.py  collaborator.py
tests/: conftest.py  test_docs_render.py  test_docs_write.py  test_oauth_flow.py
