[project]
name = "coclaude"
version = "0.1.0"
description = "Self-hosted MCP server for collaborative Google Docs co-work with Claude"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11,<3",
    "google-api-python-client>=2.140",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "argon2-cffi>=23.1",
    "pydantic-settings>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
coclaude = "coclaude.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coclaude"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
